[package]
name = "refmap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.0"
egui = "0.33.0"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = {  version = "1.18.1", features = ["v4", "serde"] }
opener = "0.8.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
toml = "0.9.8"


